static/style.css
*, *::before, *::after {
  box-sizing: border-box;
}
*:not(dialog) {
  margin: 0;
}
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}
#root, #__next {
  isolation: isolate;
}




h2 {
  text-align: center;
}

h3 {
  text-align: center;
  font-size: 35px;
  flex: 3;
}

h4 {
  text-align: center;
  font-size: 120px;
}

h5 {
  text-align: center;
  font-size: 100px;
}



.one-coloumn {
  display: grid;
  gap: 40px;
}

.two-column {
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: 100vh;
  margin-left: 60px;
  margin-right: 60px;
}



.order-column {
  margin-top: 40px;
  overflow-y: auto;
}

.orders-card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 400px;
  border-radius: 5px;
  margin: auto;
  height: auto;
  margin-bottom: 10px;
  padding: 7px;
}

.orders-coloumn-form {
  color: black;
}

.button-container {
  display: flex;
  width: 100%;
  gap: 10px;
}

.order-coloumn-ready {
  flex: 1;
}

.order-coloumn-delete {
  flex: 1;
}



.numpad-column {
  max-height: 100%;
}

.numpad {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 5px;
}

.numpad-form {
  font-size: 35px;
  max-width: 280px;
  margin: 0 auto;
  margin-top: 27%;
}

.numpad-input {
  width: 100%;
  height: 65px;
  margin-bottom: 10px;
  text-align: center;
  font-weight: 700;
}

.numpad-button {
  height: 90px;
  width: 90px;
}



.customer-screen-container {
  display: flex;
  width: 100%;
  gap: 10px;
}

.preparing-column {
  margin-top: 75px;
  flex: 1;
}

.please-collect-column {
  margin-top: 75px;
  flex: 1;
}

.image-column {
  flex: 1;
}

.display-card {
  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.2);
  width: 900px;
  border-radius: 25px;
  margin: auto;
  height: auto;
  margin-bottom: 35px;
  padding: 20px;
}

.display-image {
  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.2);
  width: 900px;
  border-radius: 25px;
  margin: 175px auto;
  height: 1810px;
}

